--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jijo theme
-logo: /assets/img/logo.png
+logo: https://flightradars24.co.uk/wp-content/uploads/2023/04/airbus-350-1000-virgin.jpg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
